# sentinel-platform

./: .gitignore  README.md  pubspec.yaml
assets/chainspecs/: fail-attemp-localSpec-validator.json  local-spec-validator.json  localSpec-validator.json  localSpec.json  network-spec-validator.json
assets/env/: local.env
docs/: linux-instructions.md  macos-instructions.md
ios/Runner/: Info.plist
lib/: main.dart
lib/models/: call_state_controller.dart  chain.dart  main_wrapper.dart  navigation_screen.dart  overlay_content.dart
lib/module/: action_button.dart  alert_dialog.dart  authorize_transaction_dialog.dart  snack_bar.dart  toast_message.dart  vote_dialog.dart
lib/pages/: calling.dart  home.dart  report.dart  search.dart  status.dart  test.dart  user.dart  vote.dart
lib/services/: blockchain.dart  services.dart
lib/theme/: app_theme.dart
lib/types/: human_phone_record.dart
lib/utils/: utils.dart  validator.dart
sentinel_call/: pubspec.yaml
sentinel_call/android/: settings.gradle
sentinel_call/android/app/: build.gradle
sentinel_call/assets/env/: local.env
sentinel_call/lib/: main.dart
sentinel_call/linux/: CMakeLists.txt  my_application.cc
sentinel_call/web/: index.html  manifest.json
sentinel_call/windows/: CMakeLists.txt
sentinel_chain/: Cargo.toml  Containerfile  README.md  clean-node.sh  gen-chainSpec.sh  localSpec.json  start-alice.sh  start-bob.sh  start-dev.sh
sentinel_chain/node/: Cargo.toml
sentinel_chain/pallets/scbc/: Cargo.toml
sentinel_chain/pallets/scbc/src/: lib.rs  weights.rs
sentinel_chain/runtime/: Cargo.toml  rustc-ice-2024-03-04T13_47_55-26502.txt  rustc-ice-2024-03-04T14_09_04-32210.txt
smoldot-flutter/: Cargo.toml  rust-toolchain.toml
smoldot-flutter/lib/: bridge_generated.dart
smoldot-flutter/src/: api.rs
substrate/: Cargo.toml
substrate/node/: Cargo.toml
substrate/pallets/collectibles/: Cargo.toml
substrate/pallets/collectibles/src/: lib.rs
substrate/runtime/: Cargo.toml  rustc-ice-2024-03-04T13_47_55-26502.txt  rustc-ice-2024-03-04T14_09_04-32210.txt
test/: widget_test.dart
web/: manifest.json
(+53 files in other folders)
